kubernetes/apps/default/home-assistant/zigbee2mqtt/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
  hostnames:
    - zigbee2mqtt.lab.egenintres.se
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 8080
